--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-blinker==1.6.2
-click==8.1.7
-colorama==0.4.6
-Flask==2.3.3
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-Werkzeug==2.3.7
+Flask==1.1.2
+ifaddr==0.1.7
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+Werkzeug==1.0.1
+zeroconf==0.28.0
+gunicorn==20.1.0
